# Visite360

./: .dockerignore  .env  .gitignore  .gitignore copy  Dockerfile  Dockerfile.base  Dockerfile.celery  Dockerfile.celery.beat  Dockerfile.certbot  Dockerfile.daphne  Dockerfile.gunicorn  Makefile  README.md  db.sqlite3  docker-compose.yml  entrypoint.sh  entrypoint_certbot.sh  init-letsencrypt.sh  main.py  manage.py  pyproject.toml  renew_certbot.sh  requirements.txt  watch.sh
apps/analytics/: models.py  serializers.py  urls.py  views.py
apps/bookings/: models.py  serializers.py  urls.py  views.py
apps/common/: pagination.py
apps/leads/: models.py  serializers.py  urls.py  views.py
apps/maps_explorer/: apps.py  models.py  serializers.py  urls.py  views.py
apps/organizations/: dashboard_urls.py  dashboard_views.py  models.py  permissions.py  selectors.py  serializers.py  urls.py  views.py
apps/places/: dashboard_urls.py  dashboard_views.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
apps/public/: admin.py  apps.py  consumers.py  forms.py  models.py  routing.py  urls.py  views.py
apps/tours/: admin.py  apps.py  dashboard_urls.py  dashboard_views.py  forms.py  models.py  serializers.py  services.py  urls.py  utils.py  utils_compress_image.py  views.py
apps/users/: models.py  serializers.py  views.py
config/: asgi.py  celery.py  settingyys.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  (+1 more)
nginx/: Dockerfile.nginx  default.conf  generate_ssl_cert.sh  openssl.cnf  start-nginx.sh  test.js
secrets/: db_password.txt
(+72 files in other folders)
